--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
         <div class="recipe" id="apple-zen">
             <h3>Apple Zen</h3>
             <p>A balanced blend of apple essence, a hint of orange, and warming spices. Garnished with an apple slice.</p>
-            <img src="image-placeholder.jpg" alt="Apple Zen Image Placeholder">
+            <img src="appletini.png" alt="Apple Zen Image Placeholder">
         </div>
         <div class="recipe" id="empire-blush">
             <h3>Empire Blush</h3>
             <p>A citrusy delight with a deep red wine float for a sophisticated twist.</p>
-            <img src="image-placeholder.jpg" alt="Empire Blush Image Placeholder">
+            <img src="whiskeysour.png" alt="Empire Blush Image Placeholder">
         </div>
         <div class="recipe" id="timeless-classic">
             <h3>Timeless Classic</h3>
