--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         }
         /* Sidebar */
         .sidebar {
-            width: 100;
-            background-color: #333;
+            width: 50;
+            background-color: #203f89;
             color: #fff;
             padding: 20px;
             position: fixed;
