--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         /* Sidebar */
         .sidebar {
             width: 50;
-            background-color: #203f89;
+            background-color: #1d2a49;
             color: #fff;
             padding: 20px;
             position: fixed;
@@ -74,7 +74,7 @@
             color: #666;
         }
         .recipe img {
-            width: 33%;          /* Image takes full width of container */
+            width: 40%;          /* Image takes full width of container */
             max-width: 200;     /* Constrains maximum width */
             height: 150;        /* Sets a fixed height */
             object-fit: cover;    /* Maintains aspect ratio */
@@ -104,49 +104,49 @@
     <!-- Main Content -->
     <div class="main-content">
         <div class="recipe" id="apple-zen">
-            <h3>Apple Zen</h3>
+            <h3>1 - Apple Zen</h3>
             <p>A balanced blend of apple essence, a hint of orange, and warming spices. Garnished with an apple slice.</p>
             <img src="appletini.png" alt="Apple Zen Image Placeholder">
         </div>
         <div class="recipe" id="empire-blush">
-            <h3>Empire Blush</h3>
+            <h3>2 - Empire Blush</h3>
             <p>A citrusy delight with a deep red wine float for a sophisticated twist.</p>
             <img src="whiskeysour.png" alt="Empire Blush Image Placeholder">
         </div>
         <div class="recipe" id="timeless-classic">
-            <h3>Timeless Classic</h3>
+            <h3>3 - Timeless Classic</h3>
             <p>A whiskey-forward indulgence with a touch of cherry sweetness.</p>
-            <img src="image-placeholder.jpg" alt="Timeless Classic Image Placeholder">
+            <img src="manhattan.png" alt="Timeless Classic Image Placeholder">
         </div>
         <div class="recipe" id="moscow-magic">
-            <h3>Moscow Magic</h3>
+            <h3>4 - Moscow Magic</h3>
             <p>A refreshing blend of lime, ginger, and vodka served over ice.</p>
-            <img src="image-placeholder.jpg" alt="Moscow Magic Image Placeholder">
+            <img src="moscow.png" alt="Moscow Magic Image Placeholder">
         </div>
         <div class="recipe" id="sunrise-dream">
-            <h3>Sunrise Dream</h3>
+            <h3>5 - Sunrise Dream</h3>
             <p>A burst of tequila and orange, with a dreamy gradient of color.</p>
-            <img src="image-placeholder.jpg" alt="Sunrise Dream Image Placeholder">
+            <img src="ts.png" alt="Sunrise Dream Image Placeholder">
         </div>
         <div class="recipe" id="ginger-spark">
-            <h3>Ginger Spark</h3>
+            <h3>6 - Ginger Spark</h3>
             <p>A zesty lemonade mixed with ginger for a refreshing kick.</p>
-            <img src="image-placeholder.jpg" alt="Ginger Spark Image Placeholder">
+            <img src="gl.png" alt="Ginger Spark Image Placeholder">
         </div>
         <div class="recipe" id="citrus-twist">
-            <h3>Citrus Twist</h3>
+            <h3>7 - Citrus Twist</h3>
             <p>A crisp and tart martini with the essence of citrus.</p>
-            <img src="image-placeholder.jpg" alt="Citrus Twist Image Placeholder">
+            <img src="ldm.png" alt="Citrus Twist Image Placeholder">
         </div>
         <div class="recipe" id="skyline-breeze">
-            <h3>Skyline Breeze</h3>
+            <h3>8 - Skyline Breeze</h3>
             <p>An elevated gin blend with a hint of pomegranate.</p>
-            <img src="image-placeholder.jpg" alt="Skyline Breeze Image Placeholder">
+            <img src="aviation.png" alt="Skyline Breeze Image Placeholder">
         </div>
         <div class="recipe" id="pomegranate-splash">
-            <h3>Pomegranate Splash</h3>
+            <h3>9 - Pomegranate Splash</h3>
             <p>A vibrant, tangy pomegranate martini with a twist of lime.</p>
-            <img src="image-placeholder.jpg" alt="Pomegranate Splash Image Placeholder">
+            <img src="pm.png" alt="Pomegranate Splash Image Placeholder">
         </div>
     </div>
 
