--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             color: #666;
         }
         .recipe img {
-            width: 40%;          /* Image takes full width of container */
+            width: 50%;          /* Image takes full width of container */
             max-width: 300;     /* Constrains maximum width */
-            height: 150;        /* Sets a fixed height */
+            height: 200;        /* Sets a fixed height */
             object-fit: cover;    /* Maintains aspect ratio */
             margin: 10px auto;    /* Centers the image within the container */
             border-radius: 8px;
-            border: 1px solid #ddd;
+            border: 1px solid #370a0a;
             display: block;       /* Centers the image */
         }
     </style>
