--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
             border: 1px solid #370a0a;
             display: block;       /* Centers the image */
         }
+        /* Responsive Adjustment for Smaller Screens */
+        @media (max-width: 768px) {
+            .recipe img {
+                max-width: 100%;     /* Remove width limit on smaller screens */
+                height: auto;        /* Auto height for aspect ratio */
+            }
+        }
     </style>
 </head>
 <body>
