--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Holiday's Popup Bar Menu</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Brie, sans-serif;
             background-color: #f3f4f6;
             color: #333;
             margin: 0;
