--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Holiday's Popup Bar Menu</title>
     <style>
         body {
-            font-family: Brie, sans-serif;
+            font-family: Arial, sans-serif;
             background-color: #f3f4f6;
             color: #333;
             margin: 0;
@@ -14,7 +14,7 @@
         }
         /* Sidebar */
         .sidebar {
-            width: 50;
+            width: 40;
             background-color: #1d2a49;
             color: #fff;
             padding: 20px;
@@ -100,6 +100,7 @@
         <a href="#apple-zen">Apple Zen</a>
         <a href="#empire-blush">Empire Blush</a>
         <a href="#timeless-classic">Timeless Classic</a>
+        <a href="#black-widow">Black Widow</a>
         <a href="#moscow-magic">Moscow Magic</a>
         <a href="#sunrise-dream">Sunrise Dream</a>
         <a href="#ginger-spark">Ginger Spark</a>
@@ -111,47 +112,52 @@
     <!-- Main Content -->
     <div class="main-content">
         <div class="recipe" id="apple-zen">
-            <h3>1 - Apple Zen</h3>
+            <h3>Apple Zen</h3>
             <p>A balanced blend of apple essence, a hint of orange, and warming spices. Garnished with an apple slice.</p>
             <img src="appletini.png" alt="Apple Zen Image Placeholder">
         </div>
         <div class="recipe" id="empire-blush">
-            <h3>2 - Empire Blush</h3>
+            <h3>Empire Blush</h3>
             <p>A citrusy delight with a deep red wine float for a sophisticated twist.</p>
             <img src="whiskeysour.png" alt="Empire Blush Image Placeholder">
         </div>
         <div class="recipe" id="timeless-classic">
-            <h3>3 - Timeless Classic</h3>
+            <h3>Timeless Classic</h3>
             <p>A whiskey-forward indulgence with a touch of cherry sweetness.</p>
             <img src="manhattan.png" alt="Timeless Classic Image Placeholder">
         </div>
+        <div class="recipe" id="black-widow">
+            <h3>Black Widow</h3>
+            <p>Only the bravest will try, and only the strongest will survive. </p>
+            <img src="bw.png" alt="Black Widow Image Placeholder">
+        </div>
         <div class="recipe" id="moscow-magic">
-            <h3>4 - Moscow Magic</h3>
+            <h3>Moscow Magic</h3>
             <p>A refreshing blend of lime, ginger, and vodka served over ice.</p>
             <img src="moscow.png" alt="Moscow Magic Image Placeholder">
         </div>
         <div class="recipe" id="sunrise-dream">
-            <h3>5 - Sunrise Dream</h3>
+            <h3>Sunrise Dream</h3>
             <p>A burst of tequila and orange, with a dreamy gradient of color.</p>
             <img src="ts.png" alt="Sunrise Dream Image Placeholder">
         </div>
         <div class="recipe" id="ginger-spark">
-            <h3>6 - Ginger Spark</h3>
-            <p>A zesty lemonade mixed with ginger for a refreshing kick.</p>
+            <h3>Virgin Spark</h3>
+            <p>Feeling a little too shwifty already? Take a break with this delicious mocktail.</p>
             <img src="gl.png" alt="Ginger Spark Image Placeholder">
         </div>
         <div class="recipe" id="citrus-twist">
-            <h3>7 - Citrus Twist</h3>
+            <h3>Citrus Twist</h3>
             <p>A crisp and tart martini with the essence of citrus.</p>
             <img src="ldm.png" alt="Citrus Twist Image Placeholder">
         </div>
         <div class="recipe" id="skyline-breeze">
-            <h3>8 - Skyline Breeze</h3>
+            <h3>Skyline Breeze</h3>
             <p>An elevated gin blend with a hint of pomegranate.</p>
             <img src="aviation.png" alt="Skyline Breeze Image Placeholder">
         </div>
         <div class="recipe" id="pomegranate-splash">
-            <h3>9 - Pomegranate Splash</h3>
+            <h3>Pomegranate Splash</h3>
             <p>A vibrant, tangy pomegranate martini with a twist of lime.</p>
             <img src="pm.png" alt="Pomegranate Splash Image Placeholder">
         </div>
