--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             border-right: 1px solid #444;
             box-shadow: 2px 0 5px rgba(0,0,0,0.2);
         }
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 40px;       /* Narrower sidebar on mobile */
+                padding: 10px;
+            }
+            .main-content {
+                margin-left: 100px; /* Adjusts to narrower sidebar */
+                width: calc(100% - 100px);
+            }
         .sidebar h2 {
             font-size: 26px;
             color: #00bcd4; /* teal */
@@ -47,7 +56,7 @@
         }
         /* Main Content */
         .main-content {
-            margin-left: 240px;
+            margin-left: 100px;
             padding: 30px;
             width: calc(100% - 260px);
         }
