--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         @media (max-width: 768px) {
             .sidebar {
-                width: 80px;       /* Narrower sidebar on mobile */
+                width: 100px;       /* Narrower sidebar on mobile */
                 padding: 10px;
             }
             .main-content {
@@ -68,6 +68,9 @@
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             transition: transform 0.2s ease;
+            width: 90%;               /* Adjust width as needed, e.g., 80%, 90% */
+            max-width: 500px;          /* Adjust max-width to control the card's maximum size */
+            margin: 20px auto;         /* Centers the card within the main-content area */
         }
         .recipe:hover {
             transform: scale(1.02);
