--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         @media (max-width: 768px) {
             .recipe img {
                 max-width: 100%;     /* Remove width limit on smaller screens */
+                width: 75%;        /* Set width to 90% of the parent container */
                 height: auto;        /* Auto height for aspect ratio */
             }
         }
